[package]
name = "transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rsubs-lib = "0.3.2"
tokio = { version = "1", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["tokio"]}
reqwest = { version = "0.12", features = ["json"] }
rs_openai = "0.4.1"
dotenvy = "0.15.7"
