[package]
name = "transcribe"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
youtube_dl = { version = "0.10.0", features = ["tokio"]}
reqwest = { version = "0.12", features = ["json", "stream"] }
rs_openai = "0.4.1"
dotenvy = "0.15.7"
clap = { version = "4.5.16", features = ["derive"] }
expanduser = "1.2.2"
itertools = "0.13.0"
